BIS-1715: Unify model of RDF and RO-Crate import/export based on openBIS types